음악 파일 외부 스토리지(Google Drive) 연동 및 성능 최적화

--- a/style.css
+++ b/style.css
@@ -40,6 +40,9 @@
 img {
     max-width: 100%;
     height: auto;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: crisp-edges;
+    will-change: transform;
 }
 
 img[loading="lazy"] {
